--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@shadcn/ui": "^0.0.4",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-switch": "^7.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
